# codex-community-hackathon-del-Level-up-coach

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
data/: README.md
exam_coach/: __init__.py  api.py  env.py  ingestion.py  llamaparse_ingestion.py  models.py  parsed_cache.py  storage.py  text_utils.py  topic_catalog.py  vector_index.py
exam_coach/config/: __init__.py  parsed_document.schema.json  topics.json
frontend/: EXAM_COACH_API.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/generate/: page.tsx
frontend/app/report/: page.tsx
frontend/app/test/: page.tsx
frontend/components/entry/: entry-surface.tsx
frontend/components/exam/: quiz-workspace.tsx
frontend/components/layout/: site-shell.tsx
frontend/components/report/: report-workspace.tsx
frontend/lib/: demo-data.ts  exam-coach-api.ts
lib/exam/: evaluation-engine.ts  exam-flow.ts
scripts/: download_mathongo_physics_pdfs.py  ingest_llamaparse_cache.py  ingest_question_bank.py  run_exam_coach_api.py  validate_topic_catalog.py
tests/: test_exam_coach.py
